kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surajhub
  labels:
    app: surajhub
    environment: production
