kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surajhub-service
  namespace: surajhub
  labels:
    app: surajhub
spec:
  type: LoadBalancer
  selector:
    app: surajhub
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  - name: api
    port: 3000
    targetPort: 3000
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
